# l9961

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  cspell.json  l9961_regmap.csv  register_info.md
.zed/: settings.json
examples/steval-l99615c/: Cargo.toml  memory.x
examples/steval-l99615c/.cargo/: config.toml
examples/steval-l99615c/.zed/: settings.json
examples/steval-l99615c/src/: lib.rs
examples/steval-l99615c/tests/: integration.rs
src/: commands.rs  config.rs  configuration.rs  conversions.rs  error.rs  faults.rs  lib.rs  measurement.rs  registers.rs
src/config/: ntc_thresholds.rs  voltage_thresholds.rs
src/configuration/: cell_thresholds.rs  ntc_thresholds.rs  voltage_thresholds.rs
src/registers/: blocking.rs  cc_acc_lsb_cntr.rs  cfg1_filters_cycles.rs  cfg2_enables.rs  cfg3_act.rs  chip_id.rs  csa_gain_factor.rs  curr_msk.rs  dev_addr.rs  diag_curr.rs  diag_ov_ot_ut.rs  diag_uv.rs  die_temp.rs  ntc_gpio.rs  ovc_thresholds.rs  persistent_ovc_threshold.rs  persistent_ovc_thresholds.rs  read_write.rs  sc_threshold.rs  to_faultn_msk.rs  to_fuse_rst_msk.rs  to_prdrv_bal_mask.rs  vb.rs  vb_ov_th.rs  vb_sum_max_diff_th.rs  vb_uv_th.rs  vcell.rs  vcell_1_faults.rs  vcell_bal_uv_delta_th.rs  vcell_ov_th.rs  vcell_severe_delta_thrs.rs  vcell_uv_th.rs  vcellsum.rs  vntc_ot_th.rs  vntc_severe_ot_th.rs  vntc_ut_th.rs
