[package]
name = "l9961"
version = "0.0.1"
authors = ["Zach Heylmun <zheylmun@gmail.com>"]
description = "Driver for the ST L9961 Industrial BMS"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/zheylmun/stl9961"
readme = "README.md"

[dependencies]
# Upgrade to 2.x once Defmt supports it
bitflags = "1"
defmt = { version = "0.3", optional = true }
embassy-futures = "0.1"
embedded-hal = "1"
embedded-hal-async = "1"

[dev-dependencies]

[features]
default = ["defmt", "5_cells", "ntc", "coulomb_counting"]
defmt = ["dep:defmt"]
#Hardware features
# "default" is 3 cells
4_cells = []
5_cells = ["4_cells"]
# Add NTC temperature sensing functionality to ll9961
ntc = []
# Enable coulomb counting
coulomb_counting = []
