[package]
authors = ["Zach <zheylmun@gmail.com>"]
name = "steval-l99615c"
description = "Defmt demo for the STEVAL-L9961 Evaluation Board runnng on the STM32G071RB Nucleo"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
embassy-executor = { version = "0.7", features = ["task-arena-size-512", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = {version = "*", features = ["defmt","exti","stm32g071rb", "time-driver-any","unstable-pac"]}
embassy-time = {version="0.4", features = ["tick-hz-1_000"]}
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1"
l9961 = { path = "../../", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z'            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
